--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Recyclertest</string>
+    <string name="title_activity_main0">Main0Activity</string>
+    <string name="demo_title_custom_tab_icons2">flashscore</string>
+    <string name="demo_tab_no_title">no</string>
 </resources>
